--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,10 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx"
+     
   },
   "include": [
     "src"
-  ]
+  ],
+  "typeRoots" : ["node_modules/@types", "custom_type_folder"]
 }
